📰 chore(ServidorEfetivo): otimização dos metodos
Testes e otimizações finais na classe de servidor efetivo
